translation-tool/inputs/source_meta/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Case_Type__c</fullName>
        <description>Indicates type of the case.</description>
        <inlineHelpText>Event, Change, or Task</inlineHelpText>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Business Support</fullName>
                </value>
                <value>
                    <fullName>Non-Technical</fullName>
                </value>
                <value>
                    <fullName>Product Support</fullName>
                </value>
                <value>
                    <fullName>Repair Field</fullName>
                </value>
                <value>
                    <fullName>Repair Remote</fullName>
                </value>
                <value>
                    <fullName>Techician Support</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Pre-install</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_origin__c</fullName>
        <formula>CASE( Origin, &quot;Email&quot;, IMAGE(&quot;/resource/IconEmail&quot;, &quot;Email&quot;), 
&quot;Phone&quot;, IMAGE(&quot;/resource/IconPhone&quot;, &quot;Phone&quot;), 
&quot;Facebook&quot;, IMAGE(&quot;/resource/IconFacebook&quot;, &quot;Facebook&quot;), 
&quot;Twitter&quot;, IMAGE(&quot;/resource/IconTwitter&quot;, &quot;Twitter&quot;), 
&quot;Instagram&quot;, IMAGE(&quot;/resource/IconInstagram&quot;, &quot;Instagram&quot;), 
&quot;YouTube&quot;, IMAGE(&quot;/resource/IconWeb&quot;, &quot;YouTube&quot;), 
&quot;Chat&quot;, IMAGE(&quot;/resource/IconChat&quot;, &quot;Chat&quot;), 
&quot;Web&quot;, IMAGE(&quot;/resource/IconWeb&quot;, &quot;Web&quot;), 
&quot;Community&quot;, IMAGE(&quot;/resource/IconDevice&quot;, &quot;Community&quot;), 
&quot;Device&quot;, IMAGE(&quot;/resource/IconDevice&quot;, &quot;Device&quot;), 
IMAGE(&quot;/resource/IconPhone&quot;, &quot;Phone&quot;))</formula>
        <label>Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_of_Red_Flag__c</fullName>
        <description>The Reason you are logging the Case</description>
        <inlineHelpText>The Reason you are logging the Case</inlineHelpText>
        <label>Category of Red Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payment Issues</fullName>
                </value>
                <value>
                    <fullName>Key City Approvals</fullName>
                </value>
                <value>
                    <fullName>Shipment Problems</fullName>
                </value>
                <value>
                    <fullName>Product Problems</fullName>
                </value>
                <value>
                    <fullName>Inventory Shortages/Product Shortages</fullName>
                </value>
                <value>
                    <fullName>Service Problems</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Installation Issues</fullName>
                </value>
                <value>
                    <fullName>Distribution Problem (unable to get help from Distributor)</fullName>
                </value>
                <value>
                    <fullName>Marketing Issues</fullName>
                </value>
                <value>
                    <fullName>Marketing Materials</fullName>
                </value>
                <value>
                    <fullName>Dealer Event - Key City Approval Form</fullName>
                </value>
                <value>
                    <fullName>Business Plan Approval</fullName>
                </value>
                <value>
                    <fullName>Ordering Tool Issues</fullName>
                </value>
                <value>
                    <fullName>Password Reset</fullName>
                </value>
                <value>
                    <fullName>Reoccuring Log In Problems</fullName>
                </value>
                <value>
                    <fullName>Customer Care Problems - Escalations</fullName>
                </value>
                <value>
                    <fullName>Customer Care Problems - Billing</fullName>
                </value>
                <value>
                    <fullName>Financial Trouble</fullName>
                </value>
                <value>
                    <fullName>Competition Making Inroads into Account - DSL</fullName>
                </value>
                <value>
                    <fullName>Competition Making Inroads into Account - Wireless</fullName>
                </value>
                <value>
                    <fullName>Competition Making Inroads into Account - Wild Blue</fullName>
                </value>
                <value>
                    <fullName>Local Issue impacting Business</fullName>
                </value>
                <value>
                    <fullName>Losing a Key Contact</fullName>
                </value>
                <value>
                    <fullName>Staffing Issues</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Type__c</fullName>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Created_By_Name__c</fullName>
        <formula>CreatedBy.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Date_Passed_Threshold_Date__c</fullName>
        <formula>IF( Threshold_DateTime__c &lt; NOW(), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Date Passed Threshold Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Owner_formula__c</fullName>
        <formula>IF( ISBLANK(Owner:Queue.QueueName) , Owner:User.FirstName&amp; &quot; &quot;&amp;Owner:User.LastName, Owner:Queue.QueueName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To get the current logged in user details on case throught fieldset</description>
        <label>Customer Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CustomerCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Profile_Name__c</fullName>
        <description>Captures the customer&apos;s profile name</description>
        <label>Customer Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Type__c</fullName>
        <label>Customer Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_SuspectedAsset__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acquisition Information</fullName>
                </value>
                <value>
                    <fullName>Add/Upgrade Service</fullName>
                </value>
                <value>
                    <fullName>Billing/Invoicing</fullName>
                </value>
                <value>
                    <fullName>Billing Info</fullName>
                </value>
                <value>
                    <fullName>Bill Inquiry/Dispute</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Call Recording</fullName>
                </value>
                <value>
                    <fullName>Cancel - Change of Address</fullName>
                </value>
                <value>
                    <fullName>Cancel - Competition</fullName>
                </value>
                <value>
                    <fullName>Cancel - Financial</fullName>
                </value>
                <value>
                    <fullName>Cancellation Information</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>Cancel - Ownership Change</fullName>
                </value>
                <value>
                    <fullName>Cancel - Sales Practices</fullName>
                </value>
                <value>
                    <fullName>Cancel Service</fullName>
                </value>
                <value>
                    <fullName>Cancel - Technical</fullName>
                </value>
                <value>
                    <fullName>Cancel - Treatment</fullName>
                </value>
                <value>
                    <fullName>Cancel VSAT</fullName>
                </value>
                <value>
                    <fullName>Cannot Connect to Wi-Fi Booster</fullName>
                </value>
                <value>
                    <fullName>Cannot find Wi-Fi Network</fullName>
                </value>
                <value>
                    <fullName>Cannot Login</fullName>
                </value>
                <value>
                    <fullName>Cannot Receive Emails</fullName>
                </value>
                <value>
                    <fullName>Cannot Send Emails</fullName>
                </value>
                <value>
                    <fullName>Care Operations</fullName>
                </value>
                <value>
                    <fullName>Change Due Date - Temporary</fullName>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>Change Payment Type</fullName>
                </value>
                <value>
                    <fullName>Change Service Plan</fullName>
                </value>
                <value>
                    <fullName>Client Request</fullName>
                </value>
                <value>
                    <fullName>Collect Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Requested__c</fullName>
        <label>Customer Requested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NMD</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Escalated__c</fullName>
        <label>Date Escalated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Transferred_to_SIC__c</fullName>
        <label>Date Transferred to Regulator</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Datetime_Stamp_for_Status_New__c</fullName>
        <description>Back-end field to record when status is changed to new</description>
        <label>Datetime Stamp for Status New</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>De_Escalation_Code_Frm__c</fullName>
        <label>De-escalation Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>De_Escalation_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the look up to YAHS_DeEscalationCode__c object</description>
        <label>De-escalation Reason Code</label>
        <referenceTo>YAHS_DeEscalationCode__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diagnosis__c</fullName>
        <label>Diagnosis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dispatch_Priority__c</fullName>
        <label>Dispatch Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dispatch_Type__c</fullName>
        <label>Dispatch Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Citizenship Card</fullName>
                </value>
                <value>
                    <fullName>Foreigner ID</fullName>
                </value>
                <value>
                    <fullName>Tax Identification Number (NIT)</fullName>
                </value>
                <value>
                    <fullName>Peru Foreigner ID (CE)</fullName>
                </value>
                <value>
                    <fullName>Chilean Tax Identification Number (RUT)</fullName>
                </value>
                <value>
                    <fullName>Ecuador Tax Identification Number (RUC)</fullName>
                </value>
                <value>
                    <fullName>Peru National Identity Document (DNI)</fullName>
                </value>
                <value>
                    <fullName>Peru Tax Identification Number (RUC)</fullName>
                </value>
                <value>
                    <fullName>Ecuador Foreigner Id</fullName>
                </value>
                <value>
                    <fullName>Ecuador Citizenship Card</fullName>
                </value>
                <value>
                    <fullName>Chilean Identity Card (RUN)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documents_for_Approval__c</fullName>
        <description>Documents that Require Approval from Specific Groups</description>
        <inlineHelpText>Documents that Require Approval from Specific Groups</inlineHelpText>
        <label>Documents for Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Plan</fullName>
                </value>
                <value>
                    <fullName>Key City Funds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DurationOfAllCaseActivities__c</fullName>
        <formula>IF(
DurationofAllActivities__c&gt; 0 ,
TEXT( FLOOR(DurationofAllActivities__c) ) &amp; &quot; days &quot;
&amp; TEXT( FLOOR( MOD( (DurationofAllActivities__c) * 24, 24 ) ) ) &amp; &quot; hour(s) &quot;
&amp; TEXT( FLOOR( MOD(( DurationofAllActivities__c) * 24 * 60, 60 ) )) &amp; &quot; minute(s) &quot;
&amp; TEXT(ROUND(MOD(( DurationofAllActivities__c) * 24 * 3600, 60),0)) &amp; &quot;second(s)&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Of All Case-Activities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_New_min__c</fullName>
        <label>Duration - New (min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_of_All_Activities__c</fullName>
        <formula>IF(
Sum_of_all_Activity_Duration_raw_data__c &gt; 0 ,
TEXT( FLOOR(Sum_of_all_Activity_Duration_raw_data__c ) ) &amp; &quot; days &quot;
&amp; TEXT( FLOOR( MOD( (Sum_of_all_Activity_Duration_raw_data__c  ) * 24, 24 ) ) ) &amp; &quot; hour(s) &quot;
&amp; TEXT( FLOOR( MOD(( Sum_of_all_Activity_Duration_raw_data__c ) * 24 * 60, 60 ))) &amp; &quot; minute(s) &quot;
&amp; TEXT(ROUND(MOD(( Sum_of_all_Activity_Duration_raw_data__c ) * 24 * 3600, 60),0)) &amp; &quot;second(s)&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration of All Activities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DurationofAllActivities__c</fullName>
        <label>DurationofAllActivities</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Contact Email</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Response_Date__c</fullName>
        <formula>IF(ISBLANK(HSvc_Last_Date_for_Appeal_Resolution__c), HSvc_Last_Date_for_Case_Resolution__c, HSvc_Last_Date_for_Appeal_Resolution__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Details__c</fullName>
        <label>Event Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Duration__c</fullName>
        <formula>IF( AND(RecordType.DeveloperName = &apos;Event&apos;, NOT(ISBLANK(Hsvc_StartTime__c)) ,NOT(ISBLANK(Hsvc_EndTime__c))) ,IF(
(Hsvc_EndTime__c - Hsvc_StartTime__c)&gt;= 1 ,
TEXT( FLOOR(Hsvc_EndTime__c- Hsvc_StartTime__c) ) &amp; &quot; day(s) &quot;
&amp; TEXT( FLOOR( MOD((Hsvc_EndTime__c - Hsvc_StartTime__c) * 24, 24 ) ) ) &amp; &quot; hour(s) &quot;
&amp; TEXT( FLOOR( MOD((Hsvc_EndTime__c - Hsvc_StartTime__c) * 24 * 60, 60 ) )) &amp; &quot; minute(s) &quot;,
TEXT( FLOOR( MOD((Hsvc_EndTime__c - Hsvc_StartTime__c) * 24, 24 ) ) ) &amp; &quot; hour(s) &quot;
&amp; TEXT( FLOOR( MOD((Hsvc_EndTime__c - Hsvc_StartTime__c) * 24 * 60, 60 ) )) &amp; &quot; minute(s) &quot;
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Express_Backup_Type__c</fullName>
        <label>Express Backup Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>GC2</fullName>
                </value>
                <value>
                    <fullName>GC3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_System_Status__c</fullName>
        <label>External System Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_User_Email__c</fullName>
        <label>External User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_Parent_Case_Owner_Emai__c</fullName>
        <formula>IF(CONTAINS(Parent.OwnerId,&apos;00G&apos;),Parent.Owner:Queue.QueueEmail , Parent.Owner:User.Email )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F_Parent Case Owner Emai</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUpDueDate_Actual__c</fullName>
        <description>This field will backdate the Follow Up due date by 15 minutes.</description>
        <label>FollowUpDueDate_Actual</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_up_Due_Date__c</fullName>
        <label>Follow up Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>For_Training_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please check this box for all training records.</description>
        <inlineHelpText>Please check this box for all training records.</inlineHelpText>
        <label>For Training Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HNS_Company_ID__c</fullName>
        <formula>Account.HNS_Company_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HNS Company ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNS_Location_ID__c</fullName>
        <formula>Account.HNS_Location_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HNS Location ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNS_PrdLookUp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>$Source.HSvc_SuspectedAsset__c</field>
                <operation>equals</operation>
                <valueField>HNS_Products__c.Product_Grouping__r.Name</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.HSvc_SuspectedAsset__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSVC_Chat_Key__c</fullName>
        <label>Chat Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_First_Call_Resolution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether to first call resolution was true or false for the particular case.</description>
        <label>First Call Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvcEngineering_Assessment__c</fullName>
        <label>Engineering Assessment of Issue</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvcPP_Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tools &amp; Systems</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Marketing Campaigns</fullName>
                </value>
                <value>
                    <fullName>Marketing Collateral</fullName>
                </value>
                <value>
                    <fullName>Marketing Communications</fullName>
                </value>
                <value>
                    <fullName>Marketing Events</fullName>
                </value>
                <value>
                    <fullName>Marketing Incentives</fullName>
                </value>
                <value>
                    <fullName>Marketing Programs</fullName>
                </value>
                <value>
                    <fullName>Marketing Offers</fullName>
                </value>
                <value>
                    <fullName>System Access/Account Password Reset</fullName>
                </value>
                <value>
                    <fullName>Order Support</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Account/   Contract Related</fullName>
                </value>
                <value>
                    <fullName>Compensation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvcRH_Area__c</fullName>
        <description>Retailer Helpdesk Area</description>
        <inlineHelpText>Retailer Helpdesk Area</inlineHelpText>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tools &amp; Systems</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Marketing Collateral</fullName>
                </value>
                <value>
                    <fullName>Marketing Communications</fullName>
                </value>
                <value>
                    <fullName>Marketing Events</fullName>
                </value>
                <value>
                    <fullName>Marketing Incentives</fullName>
                </value>
                <value>
                    <fullName>Marketing Programs</fullName>
                </value>
                <value>
                    <fullName>Marketing Offers</fullName>
                </value>
                <value>
                    <fullName>Account Password Reset/Access</fullName>
                </value>
                <value>
                    <fullName>Order Support</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Account/Contract Related</fullName>
                </value>
                <value>
                    <fullName>Compensation</fullName>
                </value>
                <value>
                    <fullName>Sales on Call</fullName>
                </value>
                <value>
                    <fullName>Hang Up</fullName>
                </value>
                <value>
                    <fullName>Misdial</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Dealer Collections</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvcRH_Detail__c</fullName>
        <description>Retailer Helpdesk Detail</description>
        <inlineHelpText>Retailer Helpdesk Detail</inlineHelpText>
        <label>Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvcRH_Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Portal (POW)</fullName>
                </value>
                <value>
                    <fullName>Payment Systems</fullName>
                </value>
                <value>
                    <fullName>Install portal</fullName>
                </value>
                <value>
                    <fullName>Retailer set-up status and questions</fullName>
                </value>
                <value>
                    <fullName>Account updates - address, phone number, primary contact, banking changes, company name change, email address</fullName>
                </value>
                <value>
                    <fullName>Showroom Account Management</fullName>
                </value>
                <value>
                    <fullName>Dealer Transfers between Distributors</fullName>
                </value>
                <value>
                    <fullName>Return Material Authorization (RMA) for Retailers - refer to Distributor they purchased equipment from</fullName>
                </value>
                <value>
                    <fullName>Retailer Equipment Ordering Process and Contacts</fullName>
                </value>
                <value>
                    <fullName>Who am I selling under?</fullName>
                </value>
                <value>
                    <fullName>Compensation &amp; Payment inquiries</fullName>
                </value>
                <value>
                    <fullName>Chargebacks</fullName>
                </value>
                <value>
                    <fullName>Oasis</fullName>
                </value>
                <value>
                    <fullName>Installer Info</fullName>
                </value>
                <value>
                    <fullName>Schedule Info</fullName>
                </value>
                <value>
                    <fullName>Non Standard Charges</fullName>
                </value>
                <value>
                    <fullName>Scheduling Issues</fullName>
                </value>
                <value>
                    <fullName>Dealer Resource Loading</fullName>
                </value>
                <value>
                    <fullName>Schedule Change</fullName>
                </value>
                <value>
                    <fullName>Order Closure</fullName>
                </value>
                <value>
                    <fullName>Past due date</fullName>
                </value>
                <value>
                    <fullName>Inventory Issues</fullName>
                </value>
                <value>
                    <fullName>Missed Appt</fullName>
                </value>
                <value>
                    <fullName>Strategy HughesNet Store/Ad Builder/Custom Ads</fullName>
                </value>
                <value>
                    <fullName>Advertising &amp; Google approval (websites &amp; non-Hughes pre-approved advertising assets)</fullName>
                </value>
                <value>
                    <fullName>Ad compliance notifications &amp; responses</fullName>
                </value>
                <value>
                    <fullName>Newsletters/Announcements</fullName>
                </value>
                <value>
                    <fullName>$50 event discount approval</fullName>
                </value>
                <value>
                    <fullName>Event financial assistance approval</fullName>
                </value>
                <value>
                    <fullName>HughesNet Summit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_AccountId__c</fullName>
        <formula>AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>LE,Consumer</value>
            </filterItems>
            <filterItems>
                <field>Account.CBC_ID__c</field>
                <operation>notEqual</operation>
                <value>null</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Account Name)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>